--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     // Android TV stuff
     compile 'com.android.support:leanback-v17:25.3.1'
+    compile 'com.google.android.libraries.tv:companionlibrary:0.1'
 
     // JUnit stuff
     testCompile 'junit:junit:4.12'
