--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,16 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
     // Android TV stuff
     compile 'com.android.support:leanback-v17:25.3.1'
-    compile 'com.google.android.libraries.tv:companionlibrary:0.1'
+    compile project(':tiflibrary')
 
     // JUnit stuff
     testCompile 'junit:junit:4.12'
