--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:banner="@drawable/videos_by_google_banner">
 
         <activity
-            android:name="com.zaclimon.aceiptv.setup.SetupActivityTv"
+            android:name="com.zaclimon.aceiptv.auth.AuthActivityTv"
             android:label="@string/app_name"
             android:theme="@style/Theme.Leanback">
 
