Make a stream playable using the Android Live TV app
- Add ExoPlayer as the media player (2.x.x series)
- Add a compatible TvInputService for A.C.E IPTV
- Add a compatible TvPlayer interface based on SimpleExoPlayer
- AceTvInputService: Handle the SimpleExoPlayer based on
a session's situation.
- Create an AsyncTask to retrieve the M3U playlist as well as
the EPG before starting AceJobService
- Adjust the M3U link from ACE to return a list of HLS streams
- AceChannelUtil: Show the channel name as required when
syncing channels.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     // Android TV stuff
     compile 'com.android.support:leanback-v17:25.3.1'
+    compile 'com.google.android.exoplayer:exoplayer-core:r2.4.1'
+    compile 'com.google.android.exoplayer:exoplayer-hls:r2.4.1'
     compile project(':tiflibrary')
 
     // JUnit stuff
