Implement basic MainActivity with views for Leanback
- Create MainActivity/MainTvFragment to reflect the main view
of the app
- AuthActivityTv/AuthFragmentTv: Switch to MainActivity if there
aren't any calling activities (Like AceTvInputSetupActivity)
- Create SettingsObjectAdapter which will reflect every settings
action.
- Create a CardViewPresenter which will represent each element
from row in Leanback.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".main.MainActivity"/>
+
         <service android:name=".service.AceInputTvService"
                  android:label="@string/tv_input_label"
                  android:permission="android.permission.BIND_TV_INPUT">
