Add the stream type change functionality
As the first Settings option, let's allow the user for changing the
streaming type of a given channel to either MPEG-TS or HLS.

Reflect the situation when syncing and also to AcePlayer when
streaming a given link.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         </activity>
 
         <activity android:name=".main.MainActivity"/>
+        <activity android:name=".settings.SettingsElementActivity"/>
 
         <service android:name=".service.AceInputTvService"
                  android:label="@string/tv_input_label"
