--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:banner="@drawable/videos_by_google_banner">
 
         <activity
-            android:name="com.zaclimon.aceiptv.auth.AuthActivityTv"
+            android:name="com.zaclimon.aceiptv.main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Leanback">
 
@@ -37,7 +37,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".main.MainActivity"/>
+        <activity android:name=".auth.AuthActivityTv"/>
         <activity android:name=".settings.SettingsElementActivity"/>
 
         <service android:name=".service.AceInputTvService"
