Add AceTvEpgReceiver for periodic sync
If a the periodic sync job hasn't been enabled, add a receiver on
boot for it to be added to the job list.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".setup.AceTvInputSetupActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-            </intent-filter>
-        </activity>
+        <activity
+            android:name=".setup.AceTvInputSetupActivity"
+            android:exported="true"/>
 
         <activity android:name=".auth.AuthActivityTv"/>
         <activity android:name=".settings.SettingsElementActivity"/>
@@ -58,6 +56,14 @@
             android:name=".service.AceJobService"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="true" />
+
+        <receiver
+            android:name=".receiver.AceTvEpgReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
