--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     // Android TV stuff
     compile 'com.android.support:leanback-v17:25.3.1'
     compile 'com.google.android.exoplayer:exoplayer-core:r2.4.1'
