--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "com.zaclimon.aceiptv"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -24,12 +24,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.0.0-beta2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.android.support:support-v13:26.0.0-beta2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     // Android TV stuff
-    compile 'com.android.support:leanback-v17:25.3.1'
+    compile 'com.android.support:leanback-v17:26.0.0-beta2'
     compile 'com.google.android.exoplayer:exoplayer-core:r2.4.1'
     compile 'com.google.android.exoplayer:exoplayer-hls:r2.4.1'
     compile project(':tiflibrary')
