CatchupTvFragment: Add playback capabilities
- Create PlaybackActivity/PlaybackFragment in which a video
will be played at.
- Use ExoPlayerAdapter from the leanback showcase (Since we
don't have to recreate it as well)
- Create AceVideoMediaPlayerGlue which serves as a UI interface
for the playback and adds the Picture-In-Picture mode.
- AvContentUtil: Fix some logic when getting an AvContent (The
link wasn't valid when the playlist line was parsed)
-

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
 
         <activity android:name=".auth.AuthActivityTv"/>
         <activity android:name=".settings.SettingsElementActivity"/>
+        <activity android:name=".playback.PlaybackActivity" android:resizeableActivity="true"
+                  android:supportsPictureInPicture="true"
+                  android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"/>
 
         <service android:name=".service.AceTvInputService"
                  android:label="@string/tv_input_label"
