Proceed to some little refactoring
In MVP, features should be grouped together instead of
UI components. That said, the number of packages was
a bit increasing too much so let's move everything related
to the UI to a separate package named "ui".

Also, remove all separate packages from the Settings since they
only have one file in each of them.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:banner="@drawable/ace_banner">
 
         <activity
-            android:name="com.zaclimon.aceiptv.main.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Leanback">
 
@@ -33,12 +33,12 @@
         </activity>
 
         <activity
-            android:name=".setup.AceTvInputSetupActivity"
+            android:name=".ui.setup.AceTvInputSetupActivity"
             android:exported="true"/>
 
-        <activity android:name=".auth.AuthActivityTv"/>
-        <activity android:name=".settings.SettingsElementActivity"/>
-        <activity android:name=".playback.PlaybackActivity" android:resizeableActivity="true"
+        <activity android:name=".ui.auth.AuthActivityTv"/>
+        <activity android:name=".ui.settings.SettingsElementActivity"/>
+        <activity android:name=".ui.playback.PlaybackActivity" android:resizeableActivity="true"
                   android:supportsPictureInPicture="true"
                   android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"/>
 
