acetvinputservice.xml: Change the path of the service
Since we changed packages for AceTvInputServiceSetupActivity,
let's reflect this change in the xml as well since it is crashing.

Also, disable recording as it's not supported at the moment.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,12 +32,10 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".ui.setup.AceTvInputSetupActivity"
-            android:exported="true"/>
-
+        <activity android:name=".ui.setup.AceTvInputSetupActivity" android:exported="true"/>
         <activity android:name=".ui.auth.AuthActivityTv"/>
         <activity android:name=".ui.settings.SettingsElementActivity"/>
+
         <activity android:name=".ui.playback.PlaybackActivity" android:resizeableActivity="true"
                   android:supportsPictureInPicture="true"
                   android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"/>
