--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,16 +30,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.0.0-beta2'
+    compile 'com.android.support:appcompat-v7:26.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v13:26.0.0-beta2'
+    compile 'com.android.support:support-v13:26.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
 
     // Android TV stuff
-    compile 'com.android.support:leanback-v17:26.0.0-beta2'
+    compile 'com.android.support:leanback-v17:26.0.0'
     compile 'com.google.android.exoplayer:exoplayer-core:r2.4.1'
     compile 'com.google.android.exoplayer:exoplayer-hls:r2.4.1'
     compile project(':tiflibrary')
