Ui: Rename setup package to tvinputsetup
It wasn't representative using setup since it could be used for
any kind of setup.

Change it since it is only representative of when the channels are
being configured.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.zaclimon.acetv.ui.setup.AceTvInputSetupActivity" android:theme="@style/TvTheme" android:exported="true"/>
+        <activity android:name="com.zaclimon.acetv.ui.tvinputsetup.AceTvInputSetupActivity" android:theme="@style/TvTheme" android:exported="true"/>
         <activity android:name="com.zaclimon.acetv.ui.auth.AuthActivityTv"/>
         <activity android:name="com.zaclimon.acetv.ui.settings.SettingsElementActivity"/>
 
