--- a/demoapp/build.gradle
+++ b/demoapp/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "com.zaclimon.iptvproviderlibrary"
+        applicationId "com.zaclimon.iptvproviderlibrarydemo"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
@@ -19,6 +19,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:leanback-v17:26.+'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':library')
 }
