--- a/demoapp/src/main/AndroidManifest.xml
+++ b/demoapp/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest package="com.zaclimon.iptvproviderlibrarydemo"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.android.providers.tv.permission.READ_EPG_DATA" />
+    <uses-permission android:name="com.android.providers.tv.permission.WRITE_EPG_DATA" />
+
     <uses-feature android:name="android.software.leanback" android:required="false"/>
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
 
@@ -20,6 +24,24 @@
         </activity>
 
         <activity android:name=".ui.settings.DemoSettingsElementActivity"/>
+        <activity android:name=".ui.urlinput.UrlInputActivity" android:exported="true"/>
+        <activity android:name=".ui.tvinputsetup.DemoTvInputSetupActivity" android:exported="true"/>
+
+        <service android:name="com.zaclimon.iptvproviderlibrary.service.ProviderTvInputService"
+                 android:label="@string/tv_input_label"
+                 android:permission="android.permission.BIND_TV_INPUT">
+            <intent-filter>
+                <action android:name="android.media.tv.TvInputService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.media.tv.input"
+                android:resource="@xml/tv_input_service" />
+        </service>
+
+        <service
+            android:name="com.zaclimon.iptvproviderlibrarydemo.service.DemoEpgService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="true" />
 
     </application>
 
