--- a/tiflibrary/build.gradle
+++ b/tiflibrary/build.gradle
@@ -32,14 +32,14 @@ configurations {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:26.0.1'
-    compile 'com.google.ads.interactivemedia.v3:interactivemedia:3.2.1'
-    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.android.support:support-v4:26.0.1'
+    compile 'com.google.ads.interactivemedia.v3:interactivemedia:3.6.0'
+    compile 'com.google.android.gms:play-services-ads-lite:11.0.4'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile "org.robolectric:robolectric:3.1"
-    androidTestCompile 'com.android.support:support-annotations:26.0.0'
+    androidTestCompile 'com.android.support:support-annotations:26.0.1'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
