--- a/demoapp/build.gradle
+++ b/demoapp/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "com.zaclimon.iptvproviderlibrarydemo"
+        applicationId "com.zaclimon.xipldemo"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
