Add support for search functionality
Following the changes in xipl, implement the search functionality based
on Realm for Ace.

- Implement custom AceProviderSearch Activity/Fragment
- Implement searchTitle() on RealmContentPersistence
- Implement getSearchActivity in MainTvFragment
- Add AceProviderSearchActivity in AndroidManifest.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name="com.zaclimon.acetv.ui.tvinputsetup.AceTvInputSetupActivity" android:theme="@style/TvTheme" android:exported="true"/>
         <activity android:name="com.zaclimon.acetv.ui.auth.AuthActivityTv"/>
         <activity android:name="com.zaclimon.acetv.ui.settings.AceSettingsElementActivity"/>
+        <activity android:name=".ui.search.AceProviderSearchActivity"/>
 
         <activity android:name="com.zaclimon.acetv.ui.playback.AcePlaybackActivity" android:resizeableActivity="true"
                   android:supportsPictureInPicture="true"
