--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ repositories {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion "android-P"
+    buildToolsVersion "28-rc1"
     defaultConfig {
         applicationId "com.zaclimon.acetv"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion "P"
         versionCode 10
         versionName "1.1.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -31,16 +31,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:appcompat-v7:28.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v13:26.0.1'
+    compile 'com.android.support:support-v13:28.0.0-alpha1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
 
     // Android TV stuff
-    compile 'com.android.support:leanback-v17:26.0.1'
+    compile 'com.android.support:leanback-v17:28.0.0-alpha1'
     compile 'com.google.android.exoplayer:exoplayer-core:r2.5.1'
     compile 'com.google.android.exoplayer:exoplayer-hls:r2.5.1'
     compile project(':xipl')
