--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,24 +27,24 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:28.0.0-alpha1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v13:28.0.0-alpha1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v13:28.0.0-alpha1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
 
     // Android TV stuff
-    compile 'com.android.support:leanback-v17:28.0.0-alpha1'
-    compile 'com.google.android.exoplayer:exoplayer-core:r2.5.1'
-    compile 'com.google.android.exoplayer:exoplayer-hls:r2.5.1'
-    compile project(':xipl')
+    implementation 'com.android.support:leanback-v17:28.0.0-alpha1'
+    implementation 'com.google.android.exoplayer:exoplayer-core:r2.5.1'
+    implementation 'com.google.android.exoplayer:exoplayer-hls:r2.5.1'
+    implementation project(':xipl')
 
     // JUnit stuff
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
