--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,8 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
     }
 }
 
