--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 include ':app', ':xipl', ':tiflibrary'
 
-project (':xipl').projectDir = new File('../XtreamCodesIPTVProviderLibrary/library')
-project (':tiflibrary').projectDir = new File('../XtreamCodesIPTVProviderLibrary/tiflibrary')
+project (':xipl').projectDir = new File('../xipl/library')
+project (':tiflibrary').projectDir = new File('../xipl/tiflibrary')
