demoapp: Update build.gradle
- Replace "compile" by "implementation"
- Update Build Tools to 27.0.3

--- a/demoapp/build.gradle
+++ b/demoapp/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "26.0.2"
+    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "com.zaclimon.xipldemo"
         minSdkVersion 21
@@ -19,6 +19,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':library')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':library')
 }
