--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    mavenCentral()
 }
 
 android {
@@ -43,6 +45,9 @@ dependencies {
     // Android TV stuff
     implementation 'com.android.support:leanback-v17:28.0.0-alpha1'
     implementation project(':xipl')
+
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     // JUnit stuff
     testImplementation 'junit:junit:4.12'
