--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         android:banner="@drawable/ace_banner">
 
         <activity
-            android:name="com.zaclimon.tsutaeru.ui.main.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:theme="@style/TvTheme">
 
             <intent-filter>
@@ -36,12 +36,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.zaclimon.tsutaeru.ui.tvinputsetup.TsutaeruTvInputSetupActivity" android:theme="@style/TvTheme" android:exported="true"/>
-        <activity android:name="com.zaclimon.tsutaeru.ui.auth.AuthActivityTv"/>
-        <activity android:name="com.zaclimon.tsutaeru.ui.settings.TsutaeruSettingsElementActivity"/>
+        <activity android:name=".ui.tvinputsetup.TsutaeruTvInputSetupActivity" android:theme="@style/TvTheme" android:exported="true"/>
+        <activity android:name=".ui.auth.AuthActivityTv"/>
+        <activity android:name=".ui.settings.TsutaeruSettingsElementActivity"/>
         <activity android:name=".ui.search.TsutaeruProviderSearchActivity"/>
 
-        <activity android:name="com.zaclimon.tsutaeru.ui.playback.TsutaeruPlaybackActivity" android:resizeableActivity="true"
+        <activity android:name=".ui.playback.TsutaeruPlaybackActivity" android:resizeableActivity="true"
                   android:supportsPictureInPicture="true"
                   android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"/>
 
@@ -57,12 +57,12 @@
         </service>
 
         <service
-            android:name="com.zaclimon.tsutaeru.service.TsutaeruJobService"
+            android:name=".service.TsutaeruJobService"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="true" />
 
         <receiver
-            android:name="com.zaclimon.tsutaeru.receiver.TsutaeruTvEpgReceiver">
+            android:name=".receiver.TsutaeruTvEpgReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
