--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'io.fabric'
 
 repositories {
@@ -36,7 +37,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v13:28.0.0-alpha1'
     implementation "android.arch.persistence.room:runtime:1.1.0-beta1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.0-beta1"
+    kapt "android.arch.persistence.room:compiler:1.1.0-beta1"
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
         transitive = true
