--- a/tiflibrary/build.gradle
+++ b/tiflibrary/build.gradle
@@ -32,21 +32,22 @@ configurations {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:leanback-v17:27.1.1'
     implementation 'com.google.ads.interactivemedia.v3:interactivemedia:3.6.0'
     implementation 'com.google.android.gms:play-services-ads-lite:11.0.4'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:1.10.19'
     testImplementation "org.robolectric:robolectric:3.1"
-    androidTestImplementation 'com.android.support:support-annotations:27.1.0'
+    androidTestImplementation 'com.android.support:support-annotations:27.1.1'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test:rules:0.5'
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     doclava 'com.google.doclava:doclava:1.0.6'
 }
 
-def packageVersion = '0.2'
+def packageVersion = '0.3.1'
 
 task sourceJar(type: Jar) {
     classifier = 'sources'
