Replace remaining Ace TV branding by Tsutaeru's
Spring cleaning is coming right up and it is time to remove everything
that was still related to Ace TV. We do have in stock:

- New logos and icons for Tsutaeru thanks to Logojoy
- New accent colors (Which should better complement the primary ones)
- Remove deprecated services
- Change the app's package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdkVersion "android-P"
     buildToolsVersion "28-rc1"
     defaultConfig {
-        applicationId "com.zaclimon.acetv"
+        applicationId "com.zaclimon.tsutaeru"
         minSdkVersion 21
         targetSdkVersion "P"
         versionCode 10
