--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher"
-        android:banner="@drawable/ace_banner">
+        android:banner="@drawable/tsutaeru_banner">
 
         <activity
             android:name=".ui.main.MainActivity"
