--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ repositories {
 }
 
 android {
-    compileSdkVersion "android-P"
-    buildToolsVersion "28-rc1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "com.zaclimon.tsutaeru"
         minSdkVersion 21
-        targetSdkVersion "P"
+        targetSdkVersion 27
         versionCode 10
         versionName "1.1.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -36,15 +36,15 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.android.support:support-v13:28.0.0-alpha1'
+    implementation 'com.android.support:support-v13:27.1.1'
     implementation "android.arch.persistence.room:runtime:1.1.0-beta2"
     kapt "android.arch.persistence.room:compiler:1.1.0-beta2"
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
     // Android TV stuff
-    implementation 'com.android.support:leanback-v17:28.0.0-alpha1'
+    implementation 'com.android.support:leanback-v17:27.1.1'
     implementation 'com.zaclimon:xipl:0.1.0'
     //implementation project(':xipl')
 
