AndroidManifest.xml: Add Live TV feature
This way, the Play Store can list the app as one that can provide
channel contents.

More info available here:
https://developer.android.com/training/tv/tif/tvinput

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
     <uses-feature
         android:name="android.hardware.microphone"
         android:required="false"/>
+    <uses-feature
+        android:name="android.software.live_tv"
+        android:required="true" />
 
     <application
         android:allowBackup="false"
