--- a/tiflibrary/src/main/java/com/google/android/media/tv/companionlibrary/setup/AndroidManifest.xml
+++ b/tiflibrary/src/main/java/com/google/android/media/tv/companionlibrary/setup/AndroidManifest.xml
@@ -13,7 +13,6 @@
     * See the License for the specific language governing permissions and
     * limitations under the License.
 -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.android.media.tv.companionlibrary.setup">
+<manifest package="com.google.android.media.tv.companionlibrary.setup">
     <application/>
 </manifest>
