Change Bintray publishing library to StefMa's
The Novoda bintray-release plugin, although useful, isn't quite
updated yet for new Gradle releases which are required for AndroidX
support.

@StefMa created a fork of it and updated the plugin so it is possible
to use newer relases of Gradle without issues on Android. Adapt xipl and
tiflibrary to make use of this.

Also, remove the error on tiflibrary related to javadocs since the
errors don't seem to cause any failures anymore.

--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -16,17 +16,6 @@ class MissingConfigurePublishException extends GradleException {
 
 }
 
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.novoda:bintray-release:0.8.1'
-    }
-}
-
-apply plugin: com.novoda.gradle.release.ReleasePlugin
-
 def libraryVersion = '0.2.1'
 
 Closure configurePublish = ext.has('configurePublish') ? ext.get('configurePublish') : {}
@@ -36,9 +25,9 @@ if (config == null) throw new MissingConfigurePublishException('configurePublish
 publish {
     repoName = 'xipl'
     userOrg = 'zaclimon'
-    groupId = 'com.zaclimon'
+    group = 'com.zaclimon'
+    version = libraryVersion
     artifactId = config['artifactId']
-    publishVersion = libraryVersion
     desc = config['desc']
     repository = 'https://github.com/zaclimon/xipl'
 }
