--- a/tiflibrary/build.gradle
+++ b/tiflibrary/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: "guru.stefma.bintrayrelease"
 
 android {
     compileSdkVersion 27
@@ -40,11 +41,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:rules:0.5'
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     doclava 'com.google.doclava:doclava:1.0.6'
-}
-
-// JavaDoc doesn't seem to work so disable it
-tasks.withType(Javadoc).all {
-    enabled = false
 }
 
 // Bintray upload details
