Migrate to AndroidX
- Update Gradle to 4.6
- Update Android Gradle Plugin to 3.2.0-beta05
- Update targetSdkVersion to 28
- build.gradle: Update libraries to their AndroidX counterparts
- Replace all packages in the project with their AndroidX counterparts
AndroidX is used as an effort to streamline Android library versioning
scheme.

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ org.gradle.jvmargs=-Xmx1536m
 
 # Disable the "testOnly" attribute added by default on Android Studio 3.0
 android.injected.testOnly=false
+android.useAndroidX=true
+android.enableJetifier=true
