--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,15 +7,15 @@ repositories {
 }
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "com.zaclimon.tsutaeru"
         minSdkVersion 23
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 4
         versionName "1.1.1"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         kapt {
             arguments {
                 arg("room.schemaLocation", "$projectDir/schemas".toString())
@@ -33,18 +33,18 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-alpha3', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:support-v13:27.1.1'
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    kapt "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'androidx.appcompat:appcompat:1.0.0-rc01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0-rc01'
+    implementation "androidx.room:room-runtime:2.0.0-rc01"
+    kapt "androidx.room:room-compiler:2.0.0-rc01"
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
     // Android TV stuff
-    implementation 'com.android.support:leanback-v17:27.1.1'
+    implementation 'androidx.leanback:leanback:1.0.0-rc01'
     implementation 'com.zaclimon:xipl:0.2.1'
     //implementation project(':xipl')
 
