AndroidManifest.xml: Enable clear text HTTP traffic
Since Android 9, default HTTP communications must be made in HTTPS.
That said, some providers might give some HTTP based URL so let's keep
this possible.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher"
-        android:banner="@drawable/tsutaeru_banner">
+        android:banner="@drawable/tsutaeru_banner"
+        android:usesCleartextTraffic="true">
 
         <activity
             android:name=".ui.main.MainActivity"
