gradle.properties: Enable R8
Fixes some building problems with Proguard when building a release APK.

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,10 @@ org.gradle.jvmargs=-Xmx1536m
 
 # Disable the "testOnly" attribute added by default on Android Studio 3.0
 android.injected.testOnly=false
+
+# Enable AndroidX
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Enable R8 on Android Studio with version < 3.3
+android.enableR8 = true
