Remove library publising artifacts for xipl/tiflibrary
Since xipl isn't considered like a library anymore, we won't need
library publishing elements so let's remove it.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,3 @@
-include ':app', ':xipl', ':tiflibrary'
-
-project (':xipl').projectDir = new File('../xipl/library')
-project (':tiflibrary').projectDir = new File('../xipl/tiflibrary')
+include ':app', ':library', ':tiflibrary'
+project(':library').projectDir = new File('xipl/library')
+project(':tiflibrary').projectDir = new File('xipl/tiflibrary')
