--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    // Library versions
     ext.kotlin_version = '1.2.60'
+    ext.android_junit5_version = '1.3.1.1'
+
     repositories {
         jcenter()
         google()
@@ -9,6 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:$android_junit5_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
